# sdf-baking

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/shader/: bake_sdf_cs.glsl  mesh_fs.glsl  mesh_vs.glsl
